--- a/week02/quiz/styles.css
+++ b/week02/quiz/styles.css
@@ -5,7 +5,7 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 .dojo{
-    background:  url(https://www.svgfiles.us/wp-content/uploads/Disney-Friends-Donald-Duck-Mickey-Mouse-and-Goofy-SVG-file-free.jpg) no-repeat;
+    background:  url(Disney-Friends-Donald-Duck-Mickey-Mouse-and-Goofy-SVG-file-free.jpg) no-repeat;
     width: 100%;
     height: 800px;
     background-size: 50% auto;
