--- a/week05/toDo/todo.css
+++ b/week05/toDo/todo.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(214, 210, 169);
+    background-color: rgb(58, 221, 213);
 }
 
 .container {
@@ -7,7 +7,7 @@ body {
     width: 400px;
     margin: auto;
     padding: 5%;
-    border-radius: 4px;
+    border-radius: 240px;
 }
 
 input {
@@ -111,9 +111,11 @@ ul li.checked {
     border-style: none;
 }
 
-button {
+button,
+count {
     width: 25%;
     border-radius: 10px;
+    background-color: rgb(185, 220, 31);
 }
 
 header {
