--- a/week14/main.css
+++ b/week14/main.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 
 :root{
-    --md-dark-color: #171671de;
-    --dark-color-1: #3d9fcc;
-    --dark-color-2: #3d9fcc;
-    --light-dark-color: #686fb1;
-    --span-color: #3537d3;
+    --md-dark-color: #1d1d1d;
+    --dark-color: #171717;
+    --light-dark-color: #292929;
+    --yellow-color: #d4aa11;
 }
 *{
     padding: 0;
@@ -25,7 +24,7 @@ img{
 }
 .wrapper{
     min-height: 100vh;
-    background-color: var(--dark-color-1);
+    background-color: var(--dark-color);
 }
 .wrapper .container{
     max-width: 1200px;
@@ -51,11 +50,11 @@ img{
 }
 .logo p{
     font-size: 2rem;
-    color: rgb(93, 87, 179);
+    color: #fff;
     font-weight: bold;
 }
 .logo p span{
-    color: var(--span-color);
+    color: var(--yellow-color);
 }
 .search-element{
     display: -webkit-box;
@@ -103,7 +102,7 @@ img{
 .search-list .search-list-item{
     background-color: var(--light-dark-color);
     padding: 0.5rem;
-    border-bottom: 1px solid var(--dark-color-2);
+    border-bottom: 1px solid var(--dark-color);
     width: calc(350px - 8px);
     color: #fff;
     cursor: pointer;
@@ -146,7 +145,7 @@ img{
             box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 .search-list::-webkit-scrollbar-thumb{
-    background-color: var(--span-color);
+    background-color: var(--yellow-color);
     outline: none;
     border-radius: 10px;
 }
@@ -163,8 +162,7 @@ img{
 .movie-poster img{
     max-width: 300px;
     margin: 0 auto;
-    border: 4px solid rgb(25, 44, 103);
-    border-radius: 25px;
+    border: 4px solid #fff;
 }
 .movie-info{
     text-align: center;
@@ -175,7 +173,7 @@ img{
 /* movie info stylings */
 .movie-title{
     font-size: 2rem;
-    color: var(--span-color);
+    color: var(--yellow-color);
 }
 .movie-misc-info{
     list-style-type: none;
@@ -194,12 +192,11 @@ img{
     font-weight: 500;
 }
 .movie-info .rated{
-    background-color: var(--span-color);
+    background-color: var(--yellow-color);
     padding: 0.4rem;
     margin: 0 0.4rem;
     border-radius: 3px;
     font-weight: 600;
-    border-radius: 7px;
 }
 .movie-info .released{
     font-size: 0.9rem;
@@ -214,15 +211,13 @@ img{
     display: inline-block;
     padding: 0.5rem;
     border-radius: 3px;
-    border-radius: 25px;
-    
 }
 .movie-info .plot{
     max-width: 400px;
     margin: 1rem auto;
 }
 .movie-info .language{
-    color: var(--span-color);
+    color: var(--yellow-color);
     font-style: italic;
 }
 .movie-info .awards{
@@ -230,7 +225,7 @@ img{
     font-size: 0.9rem;
 }
 .movie-info .awards i{
-    color: var(--span-color);
+    color: var(--yellow-color);
     margin: 1rem 0.7rem 0 0;
 }
 
